--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
@@ -57,30 +56,41 @@
         </div>
     </header>
 
-    <main class="container" >
-        <div class="block">
-            <div class="block-text">
-                <h2>MAIN TITLE</h2>
-                <p>Some description of our project</p>
-            </div>
+<main class="container">
+    <div class="block">
+        <div class="block-text">
+            <h2>MAIN TITLE</h2>
+            <p>Some description of our project</p>
         </div>
+    </div>
+
+
+</main>
+
+
+<div class="container-cardss">
+    <div class="cards">
+        <img src="img/product.png" alt=""> 
+        <p class="text-card">BANANA</p>
+        <p class="card-description"></p>
+        <p class="price">1234$</p>
+
+
         <div class="cards">
-
-            <div class="w-80 p-4 bg-white rounded-lg shadow-md transform hover:scale-105 transition-transform duration-300 ease-in-out">
-                <img class="w-full h-40 object-cover rounded-t-lg" alt="Card Image" src="https://via.placeholder.com/150">
-                <div class="p-4">
-                    <h2 class="text-xl  font-semibold">Beautiful Card</h2>
-                    <p class="text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis ante sit amet tellus ornare tincidunt.</p>
-                    <div class="flex justify-between items-center mt-4">
-                        <button class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-400">Learn More</button>
-                    </div>
-                </div>
-            </div>
-
+            <img src="img/product.png" alt=""> 
+            <p class="text-card">BANANA</p>
+            <p class="card-description"></p>
+            <p class="price">1234$</p>
         </div>
 
         
-    </main>
+    </div>
+</div>
+
+
+<h1 class="abzatz" style="">
+Best products of category
+</h1>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
