--- a/index.html
+++ b/index.html
@@ -63,32 +63,28 @@
             <p>Some description of our project</p>
         </div>
     </div>
-
-
+    <section class="items">
+        <div class="row ">
+            <div class="col-lg-4">
+                <img src="img/product.png" alt=""> 
+                <p class="text-card">BANANA</p>
+                <p class="card-description"></p>
+                <p class="price">1234$</p>
+            </div>    
+    
+            <div class="col-lg-4">
+                <img src="img/product.png" alt=""> 
+                <p class="text-card">BANANA</p>
+                <p class="card-description"></p>
+                <p class="price">1234$</p>
+            </div>
+        </div>
+    </section>
 </main>
 
 
-<div class="container-cardss">
-    <div class="cards">
-        <img src="img/product.png" alt=""> 
-        <p class="text-card">BANANA</p>
-        <p class="card-description"></p>
-        <p class="price">1234$</p>
 
-
-        <div class="cards">
-            <img src="img/product.png" alt=""> 
-            <p class="text-card">BANANA</p>
-            <p class="card-description"></p>
-            <p class="price">1234$</p>
-        </div>
-
-        
-    </div>
-</div>
-
-
-<h1 class="abzatz" style="">
+<h1 class="mt-3">
 Best products of category
 </h1>
 
